--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "react-rails",
   "version": "0.0.0",
   "description": "Opinionated React extensions for Real-World Production-Level Applications.",
-  "main": "main.js",
-  "browser": "browser.js",
+  "main": "dist/server.js",
+  "browser": "dist/client.min.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -25,6 +25,7 @@
     "co": "^3.1.0",
     "css-selector-parser": "^1.0.3",
     "envify": "^3.0.0",
+    "grunt-regenerator": "^1.1.0",
     "raf": "^2.0.3",
     "react-animate": "^0.1.5",
     "react-css": "0.0.2",
