--- a/package.json
+++ b/package.json
@@ -22,10 +22,14 @@
   "author": "Elie Rotenberg <elie@rotenberg.io>",
   "license": "MIT",
   "dependencies": {
+    "autoprefixer": "^3.0.0",
+    "change-case": "^2.1.5",
     "co": "^3.1.0",
+    "css-parse": "^2.0.0",
     "css-selector-parser": "^1.0.3",
     "d3": "^3.4.11",
     "envify": "^3.0.0",
+    "grunt-contrib-jst": "^0.6.0",
     "grunt-regenerator": "^1.1.0",
     "grunt-smash": "^0.1.0",
     "raf": "^2.0.3",
