--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "description": "Opinionated React extensions for Real-World Production-Level Applications.",
   "main": "dist/server.js",
-  "browser": "dist/client.min.js",
+  "browser": "dist/client.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -35,13 +35,17 @@
     "grunt-regenerator": "^1.1.0",
     "grunt-smash": "^0.1.0",
     "locale": "0.0.17",
+    "lodash": "^2.4.1",
     "raf": "^2.0.3",
+    "react": "^0.11.1",
     "react-animate": "^0.1.5",
     "react-css": "0.0.2",
     "react-query": "0.0.10",
+    "request": "^2.42.0",
     "setimmediate": "^1.0.2",
     "sha256": "^0.1.1",
-    "socket.io": "^1.1.0"
+    "socket.io": "^1.1.0",
+    "verror": "^1.4.0"
   },
   "devDependencies": {
     "browserify": "^5.11.1",
