--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "autoprefixer-core": "^3.1.0",
     "bluebird": "^2.3.2",
+    "body-parser": "^1.8.3",
     "change-case": "^2.1.5",
     "cheerio": "^0.17.0",
     "co": "^3.1.0",
