--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "body-parser": "^1.8.3",
     "change-case": "^2.1.5",
     "cheerio": "^0.17.0",
+    "clean-css": "^2.2.16",
     "co": "^3.1.0",
     "css-parse": "^2.0.0",
     "css-selector-parser": "^1.0.3",
