--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
   "name": "react-rails",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Opinionated React extensions for Real-World Production-Level Applications.",
   "main": "dist/server.js",
   "browser": "dist/client.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "install": "grunt"
   },
   "repository": {
     "type": "git",
@@ -34,11 +32,6 @@
     "css-selector-parser": "^1.0.3",
     "d3": "^3.4.11",
     "envify": "^3.0.0",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-jst": "^0.6.0",
-    "grunt-jstransform": "^0.1.0",
-    "grunt-regenerator": "^1.1.0",
-    "grunt-smash": "^0.1.0",
     "locale": "0.0.17",
     "lodash": "^2.4.1",
     "raf": "^2.0.3",
@@ -58,6 +51,11 @@
     "grunt-browserify": "^3.0.1",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-less": "^0.11.4",
-    "grunt-react": "^0.9.0"
+    "grunt-react": "^0.9.0",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-jst": "^0.6.0",
+    "grunt-jstransform": "^0.1.0",
+    "grunt-regenerator": "^1.1.0",
+    "grunt-smash": "^0.1.0"
   }
 }
