--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-rails",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "Opinionated React extensions for Real-World Production-Level Applications.",
   "main": "dist/server.js",
   "browser": "dist/client.js",
@@ -23,6 +23,7 @@
     "autoprefixer-core": "^3.1.0",
     "bluebird": "^2.3.2",
     "body-parser": "^1.8.3",
+    "browser-request": "^0.3.2",
     "change-case": "^2.1.5",
     "cheerio": "^0.17.0",
     "clean-css": "^2.2.16",
