--- a/package.json
+++ b/package.json
@@ -52,10 +52,11 @@
     "grunt": "^0.4.5",
     "grunt-browserify": "^3.0.1",
     "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-less": "^0.11.4",
-    "grunt-react": "^0.9.0",
     "grunt-contrib-jst": "^0.6.0",
+    "grunt-contrib-less": "^0.11.4",
+    "grunt-contrib-yuidoc": "^0.5.2",
     "grunt-jstransform": "^0.1.0",
+    "grunt-react": "^0.9.0",
     "grunt-regenerator": "^1.1.0",
     "grunt-smash": "^0.1.0"
   }
