--- a/package.json
+++ b/package.json
@@ -20,44 +20,36 @@
   "author": "Elie Rotenberg <elie@rotenberg.io>",
   "license": "MIT",
   "dependencies": {
-    "autoprefixer-core": "^3.1.0",
-    "bluebird": "^2.3.2",
-    "body-parser": "^1.8.3",
+    "6to5": "^1.11.6",
+    "autoprefixer-core": "^3.1.2",
+    "bluebird": "^2.3.11",
+    "body-parser": "^1.9.2",
     "browser-request": "^0.3.2",
     "change-case": "^2.1.5",
-    "cheerio": "^0.17.0",
-    "clean-css": "^2.2.16",
+    "cheerio": "^0.18.0",
+    "clean-css": "^2.2.17",
     "co": "^3.1.0",
     "css-parse": "^2.0.0",
     "css-selector-parser": "^1.0.3",
-    "d3": "^3.4.11",
-    "envify": "^3.0.0",
-    "fast-json-patch": "^0.4.0",
-    "locale": "0.0.17",
-    "lodash": "^2.4.1",
-    "raf": "^2.0.3",
+    "d3": "^3.4.13",
+    "gulp-yuidoc": "^0.1.2",
+    "locale": "0.0.20",
+    "lodash-next": "^1.0.1",
+    "raf": "^2.0.4",
     "react": "^0.12.0",
-    "react-animate": "^0.1.5",
-    "react-css": "0.0.2",
-    "react-query": "0.0.10",
-    "request": "^2.42.0",
+    "request": "^2.47.0",
     "setimmediate": "^1.0.2",
-    "sha256": "^0.1.1",
-    "socket.io": "^1.1.0",
-    "socket.io-client": "^1.1.0",
-    "verror": "^1.4.0"
+    "socket.io": "^1.2.0"
   },
   "devDependencies": {
-    "browserify": "^5.11.1",
-    "grunt": "^0.4.5",
-    "grunt-browserify": "^3.0.1",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-jst": "^0.6.0",
-    "grunt-contrib-less": "^0.11.4",
-    "grunt-contrib-yuidoc": "^0.5.2",
-    "grunt-jstransform": "^0.1.0",
-    "grunt-react": "^0.9.0",
-    "grunt-regenerator": "^1.1.0",
-    "grunt-smash": "^0.1.0"
+    "del": "^0.1.3",
+    "gulp": "^3.8.10",
+    "gulp-6to5": "^1.0.1",
+    "gulp-insert": "^0.4.0",
+    "gulp-jshint": "^1.9.0",
+    "gulp-plumber": "^0.6.6",
+    "gulp-sourcemaps": "^1.2.8",
+    "gulp-util": "^3.0.1",
+    "jshint-stylish": "^1.0.0"
   }
 }
