--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "react-rails",
-  "version": "0.2.5",
+  "name": "react-nexus",
+  "version": "0.9.0",
   "description": "Opinionated React extensions for Real-World Production-Level Applications.",
   "main": "dist/server.js",
   "browser": "dist/client.js",
   "scripts": {},
   "repository": {
     "type": "git",
-    "url": "git://git@bitbucket.org:elierotenberg/react-rails.git"
+    "url": "git://git@bitbucket.org:elierotenberg/react-nexus.git"
   },
   "keywords": [
     "react",
+    "nexus",
     "rails",
+    "react-nexus",
+    "react-rails",
     "prerender",
     "animation",
     "application",
@@ -39,6 +42,7 @@
     "react": "^0.12.0",
     "request": "^2.47.0",
     "setimmediate": "^1.0.2",
+    "should": "^4.2.1",
     "socket.io": "^1.2.0"
   },
   "devDependencies": {
