--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "react-nexus",
   "version": "0.9.0",
   "description": "Opinionated React extensions for Real-World Production-Level Applications.",
-  "main": "dist/server.js",
-  "browser": "dist/client.js",
+  "main": "dist/index.js",
   "scripts": {},
   "repository": {
     "type": "git",
@@ -31,11 +30,9 @@
     "change-case": "^2.1.5",
     "cheerio": "^0.18.0",
     "clean-css": "^2.2.17",
-    "co": "^3.1.0",
     "css-parse": "^2.0.0",
     "css-selector-parser": "^1.0.3",
     "d3": "^3.4.13",
-    "gulp-yuidoc": "^0.1.2",
     "locale": "0.0.20",
     "lodash-next": "^1.3.0",
     "raf": "^2.0.4",
@@ -43,7 +40,6 @@
     "request": "^2.47.0",
     "setimmediate": "^1.0.2",
     "should": "^4.2.1",
-    "socket.io": "^1.2.0"
   },
   "devDependencies": {
     "del": "^0.1.3",
@@ -54,6 +50,7 @@
     "gulp-plumber": "^0.6.6",
     "gulp-sourcemaps": "^1.2.8",
     "gulp-util": "^3.0.1",
-    "jshint-stylish": "^1.0.0"
+    "jshint-stylish": "^1.0.0",
+    "gulp-yuidoc": "^0.1.2"
   }
 }
