--- a/package.json
+++ b/package.json
@@ -38,8 +38,7 @@
     "raf": "^2.0.4",
     "react": "^0.12.0",
     "request": "^2.47.0",
-    "setimmediate": "^1.0.2",
-    "should": "^4.2.1",
+    "setimmediate": "^1.0.2"
   },
   "devDependencies": {
     "del": "^0.1.3",
