--- a/package.json
+++ b/package.json
@@ -25,8 +25,6 @@
     "6to5": "^1.11.6",
     "autoprefixer-core": "^3.1.2",
     "bluebird": "^2.3.11",
-    "body-parser": "^1.9.2",
-    "browser-request": "^0.3.2",
     "change-case": "^2.1.5",
     "cheerio": "^0.18.0",
     "clean-css": "^2.2.17",
@@ -35,6 +33,7 @@
     "d3": "^3.4.13",
     "locale": "0.0.20",
     "lodash-next": "^1.3.0",
+    "nexus-router": "^0.1.0",
     "raf": "^2.0.4",
     "react": "^0.12.0",
     "request": "^2.47.0",
