--- a/package.json
+++ b/package.json
@@ -24,14 +24,11 @@
     "gulp-plumber": "^0.6.6",
     "gulp-sourcemaps": "^1.2.8",
     "gulp-util": "^3.0.1",
-    "gulp-6to5": "^1.0.1",
+    "gulp-6to5": "^1.0.2",
     "jshint-stylish": "^1.0.0"
   },
   "dependencies": {
-    "6to5": "^1.12.17",
-    "bluebird": "^2.3.11",
-    "co": "^3.1.0",
-    "lodash-next": "^1.3.0",
-    "should": "^4.3.0"
+    "6to5": "^1.13.10",
+    "lodash-next": "^1.8.0"
   }
 }
