--- a/.jshintrc
+++ b/.jshintrc
@@ -1,5 +1,4 @@
 {
-
     "maxerr"        : 50,       // {int} Maximum error before stopping
 
     // Enforcing
@@ -81,6 +80,10 @@
 
     // Custom Globals
     "globals"       : {        // additional predefined global variables
-      "Promise"     : true
+      "Promise"     : true,
+      "__DEV__"     : true,
+      "__PROD__"    : true,
+      "__BROWSER__" : true,
+      "__NODE__"    : true
     }
   }
