--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jshint-stylish": "^1.0.0"
   },
   "dependencies": {
-    "6to5": "^2.2.0"
+    "6to5": "^2.2.0",
+    "lodash": "^2.4.1"
   }
 }
