--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-starterkit",
+  "name": "es6-starterkit",
   "version": "0.0.0",
   "description": "",
   "main": "dist/index.js",
@@ -8,14 +8,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/elierotenberg/my-starterkit.git"
+    "url": "https://github.com/elierotenberg/es6-starterkit.git"
   },
   "author": "Elie Rotenberg <elie@rotenberg.io>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/elierotenberg/my-starterkit/issues"
+    "url": "https://github.com/elierotenberg/es6-starterkit/issues"
   },
-  "homepage": "https://github.com/elierotenberg/my-starterkit",
+  "homepage": "https://github.com/elierotenberg/es6-starterkit",
   "devDependencies": {
     "del": "^1.1.1",
     "gulp": "^3.8.10",
@@ -23,14 +23,14 @@
     "gulp-jshint": "^1.9.0",
     "gulp-plumber": "^0.6.6",
     "gulp-sourcemaps": "^1.3.0",
-    "gulp-util": "^3.0.1",
+    "gulp-util": "^3.0.2",
     "gulp-6to5": "^2.0.0",
     "jshint-stylish": "^1.0.0"
   },
   "dependencies": {
-    "6to5": "^2.4.3",
-    "bluebird": "^2.5.3",
+    "6to5": "^2.9.4",
+    "bluebird": "^2.6.2",
     "lodash": "^2.4.1",
-    "should": "^4.4.2"
+    "should": "^4.4.4"
   }
 }
