--- a/package.json
+++ b/package.json
@@ -24,15 +24,16 @@
     "gulp-plumber": "^0.6.6",
     "gulp-sourcemaps": "^1.3.0",
     "gulp-util": "^3.0.2",
-    "gulp-6to5": "^2.0.0",
+    "gulp-6to5": "^2.0.2",
     "jshint-stylish": "^1.0.0"
   },
   "dependencies": {
-    "6to5": "^2.9.4",
-    "bluebird": "^2.6.2",
-    "lifespan": "^2.4.0",
+    "6to5": "^2.13.1",
+    "bluebird": "^2.7.1",
+    "lifespan": "^2.5.0",
     "lodash": "^2.4.1",
+    "nexus-flux": "^1.1.0",
     "react": "^0.12.2",
-    "should": "^4.4.4"
+    "should": "^4.6.0"
   }
 }
