Added react-maybe-state mixin.

--- a/package.json
+++ b/package.json
@@ -28,12 +28,13 @@
     "jshint-stylish": "^1.0.0"
   },
   "dependencies": {
-    "6to5": "^2.13.3",
-    "bluebird": "^2.8.0",
-    "lifespan": "^2.7.0",
+    "6to5": "^2.13.5",
+    "bluebird": "^2.8.2",
+    "lifespan": "^2.7.1",
     "lodash": "^2.4.1",
-    "nexus-flux": "^1.1.1",
+    "nexus-flux": "^1.3.1",
     "react": "^0.12.2",
+    "react-maybe-state": "^1.0.0",
     "should": "^4.6.1"
   }
 }
