--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
   "devDependencies": {
     "del": "^1.1.1",
     "gulp": "^3.8.10",
+    "gulp-6to5": "^2.0.2",
     "gulp-insert": "^0.4.0",
     "gulp-jshint": "^1.9.0",
     "gulp-plumber": "^0.6.6",
+    "gulp-rename": "^1.2.0",
     "gulp-sourcemaps": "^1.3.0",
     "gulp-util": "^3.0.2",
-    "gulp-6to5": "^2.0.2",
     "jshint-stylish": "^1.0.0"
   },
   "dependencies": {
@@ -34,7 +35,6 @@
     "lodash": "^2.4.1",
     "nexus-flux": "^1.5.8",
     "react": "^0.12.2",
-    "react-maybe-state": "^1.0.0",
     "should": "^4.6.1"
   }
 }
