--- a/package.json
+++ b/package.json
@@ -18,19 +18,19 @@
   "homepage": "https://github.com/elierotenberg/es6-starterkit",
   "devDependencies": {
     "del": "^1.1.1",
-    "gulp": "^3.8.10",
+    "gulp": "^3.8.11",
+    "gulp-babel": "^4.0.0",
     "gulp-insert": "^0.4.0",
-    "gulp-jshint": "^1.9.0",
+    "gulp-jshint": "^1.9.2",
     "gulp-plumber": "^0.6.6",
     "gulp-sourcemaps": "^1.3.0",
-    "gulp-util": "^3.0.2",
-    "gulp-6to5": "^3.0.0",
+    "gulp-util": "^3.0.3",
     "jshint-stylish": "^1.0.0"
   },
   "dependencies": {
-    "6to5": "^3.2.1",
-    "bluebird": "^2.9.4",
-    "lodash": "^3.0.1",
-    "should": "^4.6.2"
+    "babel": "^4.3.0",
+    "bluebird": "^2.9.9",
+    "lodash": "^3.2.0",
+    "should": "^5.0.0"
   }
 }
