--- a/package.json
+++ b/package.json
@@ -18,23 +18,23 @@
   "homepage": "https://github.com/elierotenberg/react-nexus",
   "devDependencies": {
     "del": "^1.1.1",
-    "gulp": "^3.8.10",
-    "gulp-6to5": "^3.0.0",
+    "gulp": "^3.8.11",
+    "gulp-babel": "^4.0.0",
     "gulp-insert": "^0.4.0",
-    "gulp-jshint": "^1.9.0",
+    "gulp-jshint": "^1.9.2",
     "gulp-plumber": "^0.6.6",
     "gulp-rename": "^1.2.0",
     "gulp-sourcemaps": "^1.3.0",
-    "gulp-util": "^3.0.2",
+    "gulp-util": "^3.0.3",
     "jshint-stylish": "^1.0.0"
   },
   "dependencies": {
-    "6to5": "^3.1.1",
-    "bluebird": "^2.9.3",
-    "lifespan": "^2.8.1",
-    "lodash": "^3.0.1",
-    "nexus-flux": "^1.6.1",
+    "babel": "^4.3.0",
+    "bluebird": "^2.9.10",
+    "lifespan": "^2.9.0",
+    "lodash": "^3.2.0",
+    "nexus-flux": "^2.0.1",
     "react": "^0.12.2",
-    "should": "^4.6.2"
+    "should": "^5.0.0"
   }
 }
