--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "del": "^1.1.1",
     "gulp": "^3.8.11",
     "gulp-babel": "^4.0.1",
+    "gulp-exec": "^2.1.1",
     "gulp-insert": "^0.4.0",
     "gulp-jshint": "^1.10.0",
     "gulp-plumber": "^1.0.0",
