--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   },
   "homepage": "https://github.com/elierotenberg/es6-starterkit",
   "devDependencies": {
+    "babel-eslint": "^2.0.2",
     "del": "^1.1.1",
+    "eslint-plugin-react": "^2.1.0",
     "gulp": "^3.8.11",
     "gulp-babel": "^4.0.1",
-    "gulp-exec": "^2.1.1",
+    "gulp-eslint": "^0.9.0",
     "gulp-insert": "^0.4.0",
     "gulp-jshint": "^1.10.0",
     "gulp-plumber": "^1.0.0",
