--- a/package.json
+++ b/package.json
@@ -24,11 +24,9 @@
     "gulp-babel": "^4.0.1",
     "gulp-eslint": "^0.9.0",
     "gulp-insert": "^0.4.0",
-    "gulp-jshint": "^1.10.0",
     "gulp-plumber": "^1.0.0",
     "gulp-sourcemaps": "^1.5.1",
-    "gulp-util": "^3.0.4",
-    "jshint-stylish": "^1.0.1"
+    "gulp-util": "^3.0.4"
   },
   "dependencies": {
     "babel": "^4.7.16",
