--- a/.eslintrc
+++ b/.eslintrc
@@ -187,7 +187,7 @@
 
     /* ECMAScript 6 */
     "no-var": 1,
-    "generator-star-spacing": [1, "before"],
+    "generator-star-spacing": [1, "after"],
     /*"object-shorthand": [1, "always"],*/
 
     /* Legacy */
