--- a/package.json
+++ b/package.json
@@ -1,37 +1,33 @@
 {
-  "name": "es6-starterkit",
+  "name": "millenium-comments-api",
   "version": "0.0.0",
-  "description": "",
+  "description": "Millenium Comments API",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "pm2 start process.json --env $MILLENIUM_MODE"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/elierotenberg/es6-starterkit.git"
+    "url": "git@github.com:WebediaGaming/millenium-comments-api.git"
   },
-  "author": "Elie Rotenberg <elie@rotenberg.io>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/elierotenberg/es6-starterkit/issues"
-  },
-  "homepage": "https://github.com/elierotenberg/es6-starterkit",
-  "devDependencies": {
-    "babel-eslint": "^3.0.1",
+  "author": "Hadrien Delaitre <hadrien.deuxlettres@gmail.com>",
+  "license": "Copyright Gameo Consulting SARL. All rights reserved.",
+  "homepage": "https://github.com/WebediaGaming/millenium-comments-api",
+  "dependencies": {
+    "babel": "^5.4.3",
+    "bluebird": "^2.9.25",
+    "lodash": "^3.8.0",
+    "should": "^6.0.3",
+    "babel-eslint": "^3.1.5",
     "del": "^1.1.1",
-    "eslint-plugin-react": "^2.2.0",
+    "eslint-plugin-react": "^2.3.0",
     "gulp": "^3.8.11",
     "gulp-babel": "^5.1.0",
-    "gulp-eslint": "^0.11.1",
+    "gulp-eslint": "^0.12.0",
     "gulp-insert": "^0.4.0",
-    "gulp-plumber": "^1.0.0",
+    "gulp-plumber": "^1.0.1",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-util": "^3.0.4"
-  },
-  "dependencies": {
-    "babel": "^5.1.13",
-    "bluebird": "^2.9.24",
-    "lodash": "^3.7.0",
-    "should": "^6.0.1"
   }
 }
