--- a/.eslintrc
+++ b/.eslintrc
@@ -71,6 +71,7 @@
     "curly": [1, "all"],
     "default-case": 0,
     "dot-notation": [1, { "allowKeywords": true, "allowPattern": "" }],
+    "dot-location": [1, "property"],
     "eqeqeq": 1,
     "guard-for-in": 0,
     "no-alert": 1,
@@ -150,6 +151,7 @@
     "func-names": 1,
     "func-style": 0,
     "key-spacing": [1, { "beforeColon": false, "afterColon": true }],
+    "linebreak-style": 0,
     "max-nested-callbacks": [0, 3],
     "new-cap": 1,
     "new-parens": 1,
@@ -164,7 +166,8 @@
     "no-spaced-func": 1,
     "no-ternary": 0,
     "no-trailing-spaces": 1,
-    "no-underscore-dangle": 0,
+    "no-underscore-dangle": 1,
+    "no-unneeded-ternary": 1,
     "no-wrap-func": 1,
     "one-var": [1, "never"],
     "operator-assignment": [1, "never"],
@@ -188,7 +191,7 @@
     /* ECMAScript 6 */
     "no-var": 1,
     "generator-star-spacing": [1, "after"],
-    /*"object-shorthand": [1, "always"],*/
+    "object-shorthand": [1, "always"],
 
     /* Legacy */
     "max-depth": [0, 3],
@@ -200,9 +203,11 @@
 
     /* React */
     "react/display-name": 1,
+    "react/jsx-boolean-value": 1,
     "react/jsx-quotes": [1, "single"],
     "react/jsx-no-undef": 1,
     "react/jsx-sort-props": 0,
+    "react/jsx-sort-prop-types": 1,
     "react/jsx-uses-react": 1,
     "react/jsx-uses-vars": 1,
     "react/no-did-mount-set-state": 1,
@@ -212,6 +217,7 @@
     "react/prop-types": 1,
     "react/react-in-jsx-scope": 1,
     "react/self-closing-comp": 1,
+    "react/sort-comp": 1,
     "react/wrap-multilines": 1
   }
 }
