Revamped file structure entirely. - react and nexus-flux are now direct dependencies - mixin is gone - 'enhance' is now 'bind' - 'Injector' has been added - README has been updated accordingly

--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "babel-runtime": "^5.4.7",
     "bluebird": "^2.9.26",
     "lodash": "^3.9.2",
+    "nexus-flux": "^3.3.0",
+    "react": "^0.13.3",
     "should": "^6.0.3"
   }
 }
