--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel": "^5.4.7",
     "babel-runtime": "^5.4.7",
     "bluebird": "^2.9.26",
+    "immutable": "^3.7.3",
     "lodash": "^3.9.2",
     "nexus-flux": "^3.3.0",
     "react": "^0.13.3",
