--- a/.eslintrc
+++ b/.eslintrc
@@ -44,8 +44,8 @@
     "no-dupe-args": 1,
     "no-dupe-keys": 1,
     "no-duplicate-case": 0,
+    "no-empty-character-class": 1,
     "no-empty": 1,
-    "no-empty-class": 1,
     "no-ex-assign": 1,
     "no-extra-boolean-cast": 1,
     "no-extra-parens": 0,
@@ -65,6 +65,7 @@
     "valid-typeof": 1,
 
     /* Best Practices */
+    "accessor-pairs": 0,
     "block-scoped-var": 1,
     "complexity": 0,
     "consistent-return": 1,
@@ -93,11 +94,11 @@
     "no-multi-spaces": 1,
     "no-multi-str": 1,
     "no-native-reassign": 1,
-    "no-new": 1,
     "no-new-func": 1,
     "no-new-wrappers": 1,
-    "no-octal": 1,
+    "no-new": 1,
     "no-octal-escape": 1,
+    "no-octal": 1,
     "no-param-reassign": 0,
     "no-process-env": 0,
     "no-proto": 1,
@@ -123,10 +124,10 @@
     "no-catch-shadow": 0,
     "no-delete-var": 1,
     "no-label-var": 1,
-    "no-shadow": 1,
     "no-shadow-restricted-names": 1,
-    "no-undef": 1,
+    "no-shadow": 1,
     "no-undef-init": 1,
+    "no-undef": 1,
     "no-undefined": 1,
     "no-unused-vars": [1, { "vars": "local", "args": "after-used" }],
     "no-use-before-define": 1,
@@ -141,7 +142,6 @@
     "no-sync": 1,
 
     /* Stylistic Issues */
-    "indent": [1, 2],
     "brace-style": [1, "stroustrup", { "allowSingleLine": true }],
     "camelcase": [1, { "properties": "always" }],
     "comma-spacing": [1, { "before": false, "after": true }],
@@ -150,6 +150,7 @@
     "eol-last": 1,
     "func-names": 1,
     "func-style": 0,
+    "indent": [1, 2],
     "key-spacing": [1, { "beforeColon": false, "afterColon": true }],
     "linebreak-style": 0,
     "max-nested-callbacks": [0, 3],
@@ -157,6 +158,7 @@
     "new-parens": 1,
     "newline-after-var": 0,
     "no-array-constructor": 1,
+    "no-continue": 1,
     "no-inline-comments": 1,
     "no-lonely-if": 1,
     "no-mixed-spaces-and-tabs": 1,
@@ -174,8 +176,8 @@
     "padded-blocks": [0, "never"],
     "quote-props": [0, "as-needed"],
     "quotes": [1, "single"],
-    "semi": [1, "always"],
     "semi-spacing": [1, { "before": false, "after": true }],
+    "semi": [1, "always"],
     "sort-vars": 0,
     "space-after-keywords": 0,
     "space-before-blocks": [1, "always"],
@@ -189,8 +191,8 @@
     "wrap-regex": 1,
 
     /* ECMAScript 6 */
-    "no-var": 1,
     "generator-star-spacing": [1, "after"],
+    "no-var": 1,
     "object-shorthand": [1, "always"],
 
     /* Legacy */
