Nexus components are now pure.

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "immutable": "^3.7.3",
     "lodash": "^3.9.2",
     "nexus-flux": "^3.4.0",
+    "pure-render-decorator": "^0.1.0",
     "react": "^0.13.3",
     "should": "^6.0.3"
   }
