--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "babel-eslint": "^3.1.11",
     "del": "^1.2.0",
+    "eslint": "^0.22.1",
     "eslint-plugin-react": "^2.5.0",
     "gulp": "^3.9.0",
     "gulp-babel": "^5.1.0",
