--- a/.eslintrc
+++ b/.eslintrc
@@ -22,6 +22,7 @@
   },
   "globals": {
     "_": true,
+    "should": true,
     "Promise": true,
     "__DEV__": true,
     "__PROD__": true,
@@ -157,7 +158,7 @@
     "new-parens": 1,
     "newline-after-var": 0,
     "no-array-constructor": 1,
-    "no-inline-comments": 1,
+    "no-inline-comments": 0,
     "no-lonely-if": 1,
     "no-mixed-spaces-and-tabs": 1,
     "no-multiple-empty-lines": [1, { "max": 1 }],
@@ -218,6 +219,6 @@
     "react/react-in-jsx-scope": 1,
     "react/self-closing-comp": 1,
     "react/sort-comp": 1,
-    "react/wrap-multilines": 1
+    "react/wrap-multilines": 0
   }
 }
