--- a/package.json
+++ b/package.json
@@ -2,20 +2,25 @@
   "name": "es6-starterkit",
   "version": "0.0.0",
   "description": "",
+  "homepage": "https://github.com/elierotenberg/es6-starterkit",
+  "bugs": "https://github.com/elierotenberg/es6-starterkit/issues",
+  "license": "MIT",
+  "author": "Elie Rotenberg <elie@rotenberg.io>",
   "main": "dist/index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/elierotenberg/es6-starterkit.git"
   },
-  "author": "Elie Rotenberg <elie@rotenberg.io>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/elierotenberg/es6-starterkit/issues"
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "homepage": "https://github.com/elierotenberg/es6-starterkit",
+  "dependencies": {
+    "babel": "^5.5.5",
+    "babel-runtime": "^5.5.5",
+    "bluebird": "^2.9.27",
+    "lodash": "^3.9.3",
+    "should": "^6.0.3"
+  },
   "devDependencies": {
     "babel-eslint": "^3.1.14",
     "del": "^1.2.0",
@@ -28,12 +33,5 @@
     "gulp-plumber": "^1.0.1",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-util": "^3.0.5"
-  },
-  "dependencies": {
-    "babel": "^5.5.5",
-    "babel-runtime": "^5.5.5",
-    "bluebird": "^2.9.27",
-    "lodash": "^3.9.3",
-    "should": "^6.0.3"
   }
 }
