--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "gulp-insert": "^0.4.0",
     "gulp-plumber": "^1.0.0",
     "gulp-sourcemaps": "^1.5.2",
-    "gulp-util": "^3.0.4"
+    "gulp-util": "^3.0.4",
+    "react-transform-props": "^0.1.1"
   },
   "dependencies": {
     "babel": "^5.4.7",
