Overhauled the general prupose of the directory. - __prelude is gone - dist is gone - tests are pre-wired - .babelrc is pre-wired - babel transform is now the responsibility of the final user (explained   in README).

--- a/package.json
+++ b/package.json
@@ -12,26 +12,22 @@
     "url": "https://github.com/elierotenberg/es6-starterkit.git"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "dependencies": {
-    "babel": "^5.5.8",
-    "babel-runtime": "^5.5.8",
-    "bluebird": "^2.9.30",
-    "lodash": "^3.9.3",
-    "should": "^6.0.3"
+    "test": "gulp test"
   },
   "devDependencies": {
+    "babel": "^5.5.8",
     "babel-eslint": "^3.1.15",
-    "del": "^1.2.0",
+    "babel-runtime": "^5.5.8",
     "eslint": "^0.23.0",
     "eslint-plugin-react": "^2.5.2",
     "gulp": "^3.9.0",
-    "gulp-babel": "^5.1.0",
     "gulp-eslint": "^0.14.0",
-    "gulp-insert": "^0.4.0",
-    "gulp-plumber": "^1.0.1",
-    "gulp-sourcemaps": "^1.5.2",
-    "gulp-util": "^3.0.5"
+    "gulp-mocha": "^2.1.1",
+    "gulp-plumber": "^1.0.1"
+  },
+  "dependencies": {
+    "bluebird": "^2.9.30",
+    "lodash": "^3.9.3",
+    "should": "^6.0.3"
   }
 }
