es7.decorators is now enabled by default

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,7 @@
 {
   "modules": "common",
-  "optional": ["es7.classProperties"]
+  "optional": [
+    "es7.classProperties",
+    "es7.decorators"
+  ]
 }
