- Added eslint-disable rules in gulpfile.js which is written in ES5 - Fixed eslint-react-plugin version for now as latest version throws at   linting time

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "babel-eslint": "^3.1.15",
     "babel-runtime": "^5.5.8",
     "eslint": "^0.23.0",
-    "eslint-plugin-react": "^2.5.2",
+    "eslint-plugin-react": "2.5.2",
     "gulp": "^3.9.0",
     "gulp-eslint": "^0.14.0",
     "gulp-mocha": "^2.1.1",
