Aligned all latest updates and fixed some residual warnings.

--- a/.eslintrc
+++ b/.eslintrc
@@ -152,6 +152,7 @@
     "newline-after-var": 0,
     "no-array-constructor": 1,
     "no-continue": 1,
+    "no-extra-parens": 1,
     "no-inline-comments": 0,
     "no-lonely-if": 1,
     "no-mixed-spaces-and-tabs": 1,
@@ -163,7 +164,6 @@
     "no-trailing-spaces": 1,
     "no-underscore-dangle": 0,
     "no-unneeded-ternary": 1,
-    "no-wrap-func": 1,
     "one-var": [1, "never"],
     "operator-assignment": [1, "never"],
     "padded-blocks": [0, "never"],
