Add mass revamping and some fixtures.

--- a/.eslintrc
+++ b/.eslintrc
@@ -30,7 +30,8 @@
   },
   "parser": "babel-eslint",
   "plugins": [
-    "babel"
+    "babel",
+    "react"
   ],
   "rules": {
 
@@ -214,5 +215,23 @@
     "babel/generator-star-spacing": [1, "after"],
     "babel/new-cap": 1,
     "babel/object-curly-spacing": [1, "always"],
+
+    /* React */
+    "react/display-name": 1,
+    "react/jsx-boolean-value": 1,
+    "react/jsx-no-undef": 1,
+    "react/jsx-sort-props": 0,
+    "react/jsx-sort-prop-types": 1,
+    "react/jsx-uses-react": 1,
+    "react/jsx-uses-vars": 1,
+    "react/no-did-mount-set-state": 1,
+    "react/no-did-update-set-state": 1,
+    "react/no-multi-comp": 1,
+    "react/no-unknown-property": 1,
+    "react/prop-types": 1,
+    "react/react-in-jsx-scope": 1,
+    "react/self-closing-comp": 1,
+    "react/sort-comp": 1,
+    "react/wrap-multilines": 0
   }
 }
