--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-eslint": "^4.1.3",
     "eslint": "^1.5.1",
     "eslint-plugin-babel": "^2.1.1",
+    "eslint-plugin-react": "^3.4.2",
     "gulp": "^3.9.0",
     "gulp-babel": "^5.2.1",
     "gulp-eslint": "^1.0.0",
@@ -30,11 +31,15 @@
     "gulp-sourcemaps": "^1.5.2",
     "mocha": "^2.3.3",
     "rimraf": "^2.4.3",
-    "should": "^7.1.0",
-    "source-map-support": "^0.3.2"
+    "source-map-support": "^0.3.2",
+    "typecheck-decorator": "^1.0.0"
   },
   "dependencies": {
-    "babel-runtime": "^5.8.25"
+    "babel-runtime": "^5.8.25",
+    "bluebird": "^2.10.1",
+    "deep-equal": "^1.0.1",
+    "lodash": "^3.10.1",
+    "should": "^7.1.0"
   },
   "peerDependencies": {
     "react": "^0.14.0-rc1",
