--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "babel-eslint": "^4.1.3",
     "eslint": "^1.5.1",
     "eslint-plugin-babel": "^2.1.1",
-    "eslint-plugin-react": "^3.4.2",
+    "eslint-plugin-react": "^3.5.0",
     "express": "^4.13.3",
     "gulp": "^3.9.0",
     "gulp-babel": "^5.2.1",
@@ -35,7 +35,8 @@
     "react": "^0.14.0-rc1",
     "react-dom": "^0.14.0-rc1",
     "rimraf": "^2.4.3",
-    "source-map-support": "^0.3.2"
+    "source-map-support": "^0.3.2",
+    "typecheck-decorator": "^1.3.0"
   },
   "dependencies": {
     "babel-runtime": "^5.8.25",
