--- a/package.json
+++ b/package.json
@@ -23,20 +23,19 @@
     "babel-plugin-strip-decorator": "^1.0.0",
     "eslint": "^1.5.1",
     "eslint-plugin-babel": "^2.1.1",
-    "eslint-plugin-react": "^3.5.0",
+    "eslint-plugin-react": "^3.5.1",
     "express": "^4.13.3",
     "gulp": "^3.9.0",
     "gulp-babel": "^5.2.1",
     "gulp-eslint": "^1.0.0",
     "gulp-mocha": "^2.1.3",
     "gulp-plumber": "^1.0.1",
-    "gulp-sourcemaps": "^1.5.2",
+    "gulp-sourcemaps": "^1.6.0",
     "mocha": "^2.3.3",
     "react": "^0.14.0-rc1",
     "react-dom": "^0.14.0-rc1",
     "rimraf": "^2.4.3",
-    "source-map-support": "^0.3.2",
-    "typecheck-decorator": "^1.3.0"
+    "source-map-support": "^0.3.2"
   },
   "dependencies": {
     "babel-runtime": "^5.8.25",
@@ -45,7 +44,7 @@
     "lodash": "^3.10.1",
     "should": "^7.1.0",
     "superagent": "^1.4.0",
-    "typecheck-decorator": "^1.0.1"
+    "typecheck-decorator": "^1.4.1"
   },
   "peerDependencies": {
     "react": "^0.14.0-rc1",
