--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-mocha": "^2.1.3",
     "gulp-plumber": "^1.0.1",
     "gulp-sourcemaps": "^1.6.0",
+    "jsonwebtoken": "^5.4.0",
     "mocha": "^2.3.3",
     "react": "^0.14.0-rc1",
     "react-dom": "^0.14.0-rc1",
