--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "gulp-sourcemaps": "^1.6.0",
     "jsonwebtoken": "^5.4.0",
     "mocha": "^2.3.3",
-    "react": "^0.14.0-rc1",
-    "react-dom": "^0.14.0-rc1",
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0",
     "rimraf": "^2.4.3",
     "source-map-support": "^0.3.2"
   },
@@ -48,7 +48,7 @@
     "typecheck-decorator": "^1.4.1"
   },
   "peerDependencies": {
-    "react": "^0.14.0-rc1",
-    "react-dom": "^0.14.0-rc1"
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0"
   }
 }
