Switch to babel 6
In the process, the building pipeline has been heavily reworked.
Dependency on typecheck-decorator has been removed.
bluebird has been upgraded to ^3.0.0.

--- a/.eslintrc
+++ b/.eslintrc
@@ -217,7 +217,7 @@
     "babel/object-curly-spacing": [1, "always"],
 
     /* React */
-    "react/display-name": 1,
+    "react/display-name": [1, { "acceptTranspilerName": true }],
     "react/jsx-boolean-value": 1,
     "react/jsx-no-undef": 1,
     "react/jsx-sort-props": 0,
