--- a/package.json
+++ b/package.json
@@ -1,54 +1,108 @@
 {
   "name": "react-nexus",
-  "version": "4.0.6-dev",
+  "version": "4.1.0-dev",
   "description": "",
-  "main": "dist/index.js",
+  "main": "dist/node/index.min.js",
+  "browser": "dist/browser/index.min.js",
   "scripts": {
-    "prepublish": "gulp",
     "test": "gulp test"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/elierotenberg/react-nexus.git"
   },
-  "author": "Elie Rotenberg <elie@rotenberg.io>",
-  "license": "MIT",
+  "author": "",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/elierotenberg/react-nexus/issues"
   },
   "homepage": "https://github.com/elierotenberg/react-nexus#readme",
+  "private": true,
   "devDependencies": {
-    "babel": "^5.8.23",
-    "babel-eslint": "^4.1.3",
-    "babel-plugin-strip-decorator": "^1.0.0",
-    "eslint": "^1.5.1",
-    "eslint-plugin-babel": "^2.1.1",
-    "eslint-plugin-react": "^3.5.1",
+    "babel-eslint": "^5.0.0-beta4",
+    "babel-loader": "^6.2.0",
+    "babel-plugin-react-display-name": "^2.0.0",
+    "babel-plugin-syntax-async-functions": "^6.3.13",
+    "babel-plugin-syntax-async-generators": "^6.3.13",
+    "babel-plugin-syntax-class-constructor-call": "^6.3.13",
+    "babel-plugin-syntax-class-properties": "^6.3.13",
+    "babel-plugin-syntax-decorators": "^6.3.13",
+    "babel-plugin-syntax-flow": "^6.3.13",
+    "babel-plugin-syntax-jsx": "^6.3.13",
+    "babel-plugin-syntax-object-rest-spread": "^6.3.13",
+    "babel-plugin-syntax-trailing-function-commas": "^6.3.13",
+    "babel-plugin-transform-async-to-generator": "^6.3.13",
+    "babel-plugin-transform-async-to-module-method": "^6.3.13",
+    "babel-plugin-transform-class-constructor-call": "^6.3.13",
+    "babel-plugin-transform-class-properties": "^6.3.13",
+    "babel-plugin-transform-decorators-legacy": "^1.1.0",
+    "babel-plugin-transform-es2015-arrow-functions": "^6.3.13",
+    "babel-plugin-transform-es2015-block-scoped-functions": "^6.3.13",
+    "babel-plugin-transform-es2015-block-scoping": "^6.3.13",
+    "babel-plugin-transform-es2015-classes": "^6.3.13",
+    "babel-plugin-transform-es2015-computed-properties": "^6.3.13",
+    "babel-plugin-transform-es2015-constants": "^6.1.4",
+    "babel-plugin-transform-es2015-destructuring": "^6.3.13",
+    "babel-plugin-transform-es2015-for-of": "^6.3.13",
+    "babel-plugin-transform-es2015-function-name": "^6.3.13",
+    "babel-plugin-transform-es2015-literals": "^6.3.13",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.3.13",
+    "babel-plugin-transform-es2015-object-super": "^6.3.13",
+    "babel-plugin-transform-es2015-parameters": "^6.3.13",
+    "babel-plugin-transform-es2015-shorthand-properties": "^6.3.13",
+    "babel-plugin-transform-es2015-spread": "^6.3.14",
+    "babel-plugin-transform-es2015-sticky-regex": "^6.3.13",
+    "babel-plugin-transform-es2015-template-literals": "^6.3.13",
+    "babel-plugin-transform-es2015-typeof-symbol": "^6.3.13",
+    "babel-plugin-transform-es2015-unicode-regex": "^6.3.13",
+    "babel-plugin-transform-eval": "^6.3.13",
+    "babel-plugin-transform-exponentiation-operator": "^6.3.13",
+    "babel-plugin-transform-flow-strip-types": "^6.3.13",
+    "babel-plugin-transform-jscript": "^6.3.13",
+    "babel-plugin-transform-object-assign": "^6.3.13",
+    "babel-plugin-transform-object-rest-spread": "^6.3.13",
+    "babel-plugin-transform-object-set-prototype-of-to-assign": "^6.3.13",
+    "babel-plugin-transform-proto-to-assign": "^6.3.13",
+    "babel-plugin-transform-react-constant-elements": "^6.3.13",
+    "babel-plugin-transform-react-display-name": "^6.3.13",
+    "babel-plugin-transform-react-inline-elements": "^6.3.13",
+    "babel-plugin-transform-react-jsx": "^6.3.13",
+    "babel-plugin-transform-regenerator": "^6.3.13",
+    "babel-plugin-transform-runtime": "^6.3.13",
+    "babel-plugin-transform-undefined-to-void": "^6.3.13",
+    "babel-register": "^6.3.13",
+    "eslint": "^1.10.3",
+    "eslint-plugin-babel": "^3.0.0",
+    "eslint-plugin-react": "^3.11.3",
     "express": "^4.13.3",
     "gulp": "^3.9.0",
-    "gulp-babel": "^5.2.1",
-    "gulp-eslint": "^1.0.0",
-    "gulp-mocha": "^2.1.3",
+    "gulp-babel": "^6.1.1",
+    "gulp-eslint": "^1.1.1",
+    "gulp-mocha": "^2.2.0",
     "gulp-plumber": "^1.0.1",
-    "gulp-sourcemaps": "^1.6.0",
-    "jsonwebtoken": "^5.4.0",
-    "mocha": "^2.3.3",
-    "react": "^0.14.0",
-    "react-dom": "^0.14.0",
-    "rimraf": "^2.4.3",
-    "source-map-support": "^0.3.2"
+    "gulp-util": "^3.0.7",
+    "json-loader": "^0.5.4",
+    "jsonwebtoken": "^5.4.1",
+    "mocha": "^2.3.4",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3",
+    "rimraf": "^2.4.4",
+    "should": "^7.1.1",
+    "source-map-support": "^0.4.0",
+    "webpack": "^1.12.9"
   },
   "dependencies": {
-    "babel-runtime": "^5.8.25",
-    "bluebird": "^2.10.1",
+    "babel-plugin-transform-es2015-classes": "^6.3.15",
+    "babel-plugin-transform-es2015-destructuring": "^6.3.15",
+    "babel-plugin-transform-flow-strip-types": "^6.3.15",
+    "babel-polyfill": "^6.3.14",
+    "bluebird": "^3.0.6",
     "deep-equal": "^1.0.1",
     "lodash": "^3.10.1",
-    "should": "^7.1.0",
-    "superagent": "^1.4.0",
-    "typecheck-decorator": "^1.4.1"
+    "superagent": "^1.5.0"
   },
   "peerDependencies": {
-    "react": "^0.14.0",
-    "react-dom": "^0.14.0"
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3"
   }
 }
