--- a/package.json
+++ b/package.json
@@ -97,7 +97,8 @@
     "babel-runtime": "^6.3.19",
     "bluebird": "^3.1.1",
     "deep-equal": "^1.0.1",
-    "lodash": "^3.10.1"
+    "lodash": "^3.10.1",
+    "should": "^8.0.2"
   },
   "peerDependencies": {
     "react": "^0.14.3",
