--- a/package.json
+++ b/package.json
@@ -97,7 +97,9 @@
     "babel-runtime": "^6.3.19",
     "bluebird": "^3.1.1",
     "deep-equal": "^1.0.1",
+    "isomorphic-fetch": "^2.2.0",
     "lodash": "^3.10.1",
+    "path-to-regexp": "^1.2.1",
     "should": "^8.0.2"
   },
   "peerDependencies": {
