--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/node/prod/lib/index.js",
   "browser": "dist/browser/lib/app/index.js",
   "scripts": {
-    "test": "gulp test"
+    "test": "gulp test",
+    "iron-test": "iron-node node_modules/gulp/bin/gulp.js test"
   },
   "repository": {
     "type": "git",
@@ -70,9 +71,11 @@
     "babel-plugin-transform-runtime": "^6.4.3",
     "babel-plugin-transform-undefined-to-void": "^6.3.13",
     "babel-register": "^6.4.3",
+    "body-parser": "^1.14.2",
     "eslint": "^1.10.3",
     "eslint-plugin-babel": "^3.0.0",
     "eslint-plugin-react": "^3.15.0",
+    "express": "^4.13.4",
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.1",
     "gulp-changed": "^1.3.0",
