--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-nexus",
-  "version": "4.0.0-dev2",
+  "version": "4.0.0-alpha",
   "description": "Real world apps with React",
   "main": "dist/node/prod/lib/index.js",
   "browser": "dist/browser/prod/lib/index.js",
