--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "koa-router": "^5.3.0",
     "mocha": "^2.3.4",
     "react": "^0.14.6",
+    "react-addons-pure-render-mixin": "^15.0.1",
     "react-addons-test-utils": "^0.14.7",
     "react-dom": "^0.14.6",
     "rimraf": "^2.5.0",
