--- a/package.json
+++ b/package.json
@@ -89,12 +89,14 @@
     "gulp-uglify": "^1.4.1",
     "gulp-util": "^3.0.7",
     "gulp-webdriver": "^1.0.3",
+    "http-status-codes": "^1.0.6",
     "json-loader": "^0.5.4",
     "koa": "^1.1.2",
     "koa-body": "^1.4.0",
     "koa-cors": "0.0.16",
     "koa-router": "^5.3.0",
     "mocha": "^2.3.4",
+    "nock": "^8.0.0",
     "react": "^0.14.6",
     "react-addons-pure-render-mixin": "^15.0.1",
     "react-addons-test-utils": "^0.14.7",
@@ -106,6 +108,7 @@
     "sinon": "^1.17.3",
     "source-map-support": "^0.4.0",
     "through2": "^2.0.0",
+    "url": "^0.11.0",
     "webdriverio": "^4.0.3",
     "webpack": "^1.12.11",
     "webpack-stream": "^3.0.0"
