--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "babel-eslint": "^5.0.0-beta6",
     "babel-loader": "^6.2.1",
+    "babel-plugin-lodash": "^3.2.8",
     "babel-plugin-react-display-name": "^2.0.0",
     "babel-plugin-syntax-async-functions": "^6.3.13",
     "babel-plugin-syntax-async-generators": "^6.3.13",
