--- a/package.json
+++ b/package.json
@@ -100,9 +100,10 @@
     "koa-router": "^5.3.0",
     "mocha": "^2.3.4",
     "nock": "^8.0.0",
-    "react": "^15.3.0",
+    "react": "^15.6.2",
     "react-addons-pure-render-mixin": "^15.3.0",
-    "react-dom": "^15.3.0",
+    "react-dom": "^15.6.2",
+    "react-test-renderer": "^16.0.0",
     "rimraf": "^2.5.0",
     "run-sequence": "^1.1.5",
     "selenium-standalone": "^4.9.0",
@@ -126,7 +127,7 @@
     "setimmediate": "^1.0.4"
   },
   "peerDependencies": {
-    "react": "^15.3.0",
-    "react-dom": "^15.3.0"
+    "react": "^15.6.2",
+    "react-dom": "^15.6.2"
   }
 }
