--- a/package.json
+++ b/package.json
@@ -101,7 +101,6 @@
     "mocha": "^2.3.4",
     "nock": "^8.0.0",
     "react": "^15.6.2",
-    "react-addons-pure-render-mixin": "^15.3.0",
     "react-dom": "^15.6.2",
     "react-test-renderer": "^16.0.0",
     "rimraf": "^2.5.0",
@@ -124,7 +123,8 @@
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.0.0",
     "path-to-regexp": "^1.2.1",
-    "setimmediate": "^1.0.4"
+    "setimmediate": "^1.0.4",
+    "shallowequal": "^1.0.2"
   },
   "peerDependencies": {
     "react": "^15.6.2",
