--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "koa-router": "^5.3.0",
     "mocha": "^2.3.4",
     "nock": "^8.0.0",
+    "prop-types": "^15.6.0",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
     "react-test-renderer": "^16.0.0",
